# exocortic

./: CMakeLists.txt  README.md  conanfile.py  distro.json.in
.github/workflows/: build-changes.yml  build-distro.yml  build-package.yml  ci.yml  posix.yml
cmake/: fixup_rpaths.cmake  generate_target_name.cmake  install_lyric_bootstrap.cmake  install_zuri_package.cmake
tools/: generate_distro_conf  make_distro  patch_ops.py  reset_rpaths
tools/distro/: patch_ops.py
